Upgrading to JDK17 LTS